log
Thu Apr 16 08:47:47 PM UTC 2026: 
 hashmap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:25: error: passing argument 2 of ‘hash’ makes integer from pointer without a cast [-Wint-conversion]
   63 |     long pos = hash(key,value) ;
      |                         ^~~~~
      |                         |
      |                         void *
hashmap.c:28:29: note: expected ‘long int’ but argument is of type ‘void *’
   28 | long hash( char * key, long capacity) {
      |                        ~~~~~^~~~~~~~
b0fbc57
Thu Apr 16 08:48:45 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 5/60
d62a571
Sat Apr 18 05:32:56 PM UTC 2026: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:51:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currrent’; did you mean ‘current’?
   51 |     mapa->currrent = -1 ;
      |           ^~~~~~~~
      |           current
30797ea
Sat Apr 18 05:33:15 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:20: error: ‘mapa’ is used uninitialized [-Werror=uninitialized]
   50 |     mapa->capacity = capacity ;
      |     ~~~~~~~~~~~~~~~^~~~~~~~~~
hashmap.c:49:14: note: ‘mapa’ was declared here
   49 |     HashMap *mapa ;
      |              ^~~~
cc1: all warnings being treated as errors
458cd8a
Sat Apr 18 05:33:57 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:9: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   50 |     mapa->capacity = capacity ;
      |         ^~
hashmap.c:49:21: note: object of size 8 allocated by ‘malloc’
   49 |     HashMap *mapa = malloc(sizeof(mapa)) ;
      |                     ^~~~~~~~~~~~~~~~~~~~
hashmap.c:51:9: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   51 |     mapa->current = -1 ;
      |         ^~
hashmap.c:49:21: note: object of size 8 allocated by ‘malloc’
   49 |     HashMap *mapa = malloc(sizeof(mapa)) ;
      |                     ^~~~~~~~~~~~~~~~~~~~
hashmap.c:57:13: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   57 |         mapa->buckets[i] = par ;
      |             ^~
hashmap.c:49:21: note: object of size 8 allocated by ‘malloc’
   49 |     HashMap *mapa = malloc(sizeof(mapa)) ;
      |                     ^~~~~~~~~~~~~~~~~~~~
hashmap.c:58:13: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   58 |         mapa->size ++ ;
      |             ^~
hashmap.c:49:21: note: object of size 8 allocated by ‘malloc’
   49 |     HashMap *mapa = malloc(sizeof(mapa)) ;
      |                     ^~~~~~~~~~~~~~~~~~~~
hashmap.c:58:13: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   58 |         mapa->size ++ ;
      |             ^~
hashmap.c:49:21: note: object of size 8 allocated by ‘malloc’
   49 |     HashMap *mapa = malloc(sizeof(mapa)) ;
      |                     ^~~~~~~~~~~~~~~~~~~~
hashmap.c:57:13: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |         mapa->buckets[i] = par ;
      |         ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
b1983eb
Sat Apr 18 05:34:49 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:57:13: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |         mapa->buckets[i] = par ;
      |         ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
b3269ad
Sat Apr 18 05:36:08 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|6
total_score: 5/60
0b8df8c
Sat Apr 18 05:37:25 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
703c393
Sat Apr 18 05:38:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 5/60
de79833
